--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+     <div class="spinner-wrapper">
+        <div class="spinner"></div>
+    </div>                                              
     <div class="container" id="container">
         <div class="left">
             <div class="container" style="position: relative;">
