--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel=stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/animation.css">
     <title>Prabha Dahal . RESUME</title>
 </head>
 
