--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                 </div>
-                <form action="" method="POST">
+                <form action="https://formspree.io/xeqeodjr" method="POST">
                     <h2 style="color:rgba(144,144,155)">Get in touch</h2>
                     <div class="fields">
                         <input type="text" placeholder="Name" required>
