--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                 <form action="https://formspree.io/xeqeodjr" method="POST">
                     <h2 style="color:rgba(144,144,155)">Get in touch</h2>
                     <div class="fields">
-                        <input type="text" placeholder="Name" required>
-                        <input type="email" placeholder="Email" required>
-                        <input type="tel" placeholder="Contact" required>
+                        <input type="text" placeholder="Name" name="Name" required>
+                        <input type="email" placeholder="Email" name="Email" required>
+                        <input type="tel" placeholder="Contact" name="Contact" required>
                         <textarea name="message" id="" cols="30" rows="10" placeholder="Message" required></textarea>
                         <button class="btn">SUBMIT</button>
                     </div>
