--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <input type="text" placeholder="Name" name="Name" required>
                         <input type="email" placeholder="Email" name="Email" required>
                         <input type="tel" placeholder="Contact" name="Contact" required>
-                        <textarea name="message" id="" cols="30" rows="10" placeholder="Message" required></textarea>
+                        <textarea name="Message" id="" cols="30" rows="10" placeholder="Message" required></textarea>
                         <button class="btn">SUBMIT</button>
                     </div>
                     <footer>
