--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                     <h2 style="color:rgba(144,144,155)">Work Experience</h2>
                     <h3>2017-08 to 2019-12</h3>
                     <ul>
+                        <h3>Sales Receptionist</h3>
+                        <h4 style="margin-bottom: 10px">Kantipur Auto Link Pvt. Ltd, Birtamod - 1, Jhapa</h4>
                         <li>Updated customer accounts and system database with latest details to supprt accuracy
                             and
                             efficiencyin future interactions.</li>
