--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     <div class="container" id="container">
         <div class="left">
             <div class="container" style="position: relative;">
+                <div class="menu">
+                    <button class="menu-btn">MENU</button>
+                    <div class="menu-items">
+                        <div><a href="#home"><i class="fa fa-home"></i></a></div>
+                        <div><a href="#workexp"><i class="fa fa-briefcase"></i></a></div>
+                        <div><a href="#education"><i class="fa fa-book"></i></a></div>
+                        <div><a href="#address"><i class="fa fa-map-marker"></i></a></div>
+                        <div><a href="#skill"><i class="fa fa-cogs"></i></a></div>
+                        <div><a href="#contact"><i class="fa fa-phone"></i></a></div>
+                    </div>
+                </div>
                 <div class="profile">
                     <img src="img/prabha.jpg" alt="">
                 </div>
