--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Prabha Dahal . RESUME</title>
 </head>
 
-<body>
+<body id="home">
      <div class="spinner-wrapper">
         <div class="spinner"></div>
     </div>                                              
@@ -61,7 +61,7 @@
         </div>
         <div class="right">
             <div class="container">
-                <div class="work-exp">
+                <div class="work-exp" id="workexp">
                     <h2 style="color:rgba(144,144,155)">Work Experience</h2>
                     <h3>2017-08 to 2019-12</h3>
                     <ul>
@@ -89,7 +89,7 @@
                         <li>Managed all the paper works required for the delivery of vehicles.</li>
                     </ul>
                 </div>
-                <div class="education">
+                <div class="education" id="education">
                     <h2 style="color:rgba(144,144,155)">Education</h2>
                     <h3>2017-11-current</h3>
                     <div class="college">
@@ -97,7 +97,7 @@
                         <p>Providence College Of Management - Birtamod-1, Jhapa</p>
                     </div>
                 </div>
-                <div class="contact">
+                <div class="contact" id="address">
                     <h2 style="color:rgba(144,144,155)">Contact</h2>
                     <div class="address">
                         <h3>Address</h3>
@@ -108,7 +108,7 @@
                         <a class="email-link" href="mailto:prabhadahal219@gmail.com">prabhadahal219@gmail.com</a>
                     </div>
                 </div>
-                <div class="skills">
+                <div class="skills" id="skill">
                     <h2 style="color:rgba(144,144,155)">Skills</h2>
                     <div class="bars">
                         <p>Data Entry</p>
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-                <form action="https://formspree.io/xeqeodjr" method="POST">
+                <form action="https://formspree.io/xeqeodjr" method="POST" id="contact">
                     <h2 style="color:rgba(144,144,155)">Get in touch</h2>
                     <div class="fields">
                         <input type="text" placeholder="Name" name="Name" required>
