--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h2>Prabha Dahal</h2>
                 </div>
                 <div class="quote">
-                    <blockquote style="text-decoration: underline;">"Your dreams don't work unless you do"</blockquote>
+                    <blockquote style="margin-top: 5px; font-weight: 900;">"Your dreams don't work unless you do"</blockquote>
                 </div>
                 <div class="about">
                     <p>Focused customer service professional skilled in lead generation, customer relationship
