--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <h3>Address</h3>
                         <p>Birtamod-1, Jhapa</p>
                         <h3>Phone</h3>
-                        <a href="tel:9814995089" style="color: black">9814995089</a>
+                        <p><a href="tel:9814995089" style="color: black">9814995089</a></p>
                         <h3>Email</h3>
                         <a class="email-link" href="mailto:prabhadahal219@gmail.com">prabhadahal219@gmail.com</a>
                     </div>
