--- a/404.html
+++ b/404.html
@@ -351,7 +351,8 @@
 	 transition: all 0.2s linear;
 
 }
-
+	
+a{text-decoration: none;}
  
 
   </style>
@@ -382,7 +383,7 @@
 
 <h1>Oops! Something went wrong!</h1>
 
-<div class="btn">Return to Home</div>
+a href="https://prabhadahal.info.np/"<<div class="btn">Return to Home</div></a>
 
 </body>
 
