added profile img

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="profile">
-                    <img src="img/prabha.jpg" alt="">
+                    <img src="img/profile.jpg" alt="">
                 </div>
                 <div class="name">
                     <h2>Prabha Dahal</h2>
